--- a/Invoice/report/FUNDING_2.jrxml
+++ b/Invoice/report/FUNDING_2.jrxml
@@ -3,7 +3,10 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="date" class="java.util.Date">
+	<parameter name="date1" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="date2" class="java.util.Date">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -27,7 +30,7 @@ FROM
     MASTER_DANA md ON (f.KONTRAK_ID = md.MASTER_DANA_ID)
         AND (f.CHECK_REFF = 0)
 WHERE
-    f.TANGGAL = $P{date};]]>
+    f.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
 	</queryString>
 	<field name="FUNDING_ID" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
