--- a/Invoice/report/FUNDING_2.jrxml
+++ b/Invoice/report/FUNDING_2.jrxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FUNDING" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fc92dcd0-6ada-426e-9330-3ccef1183903">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="266"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="date1" class="java.util.Date">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="date2" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="klien" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -30,6 +33,10 @@ FROM
     MASTER_DANA md ON (f.KONTRAK_ID = md.MASTER_DANA_ID)
         AND (f.CHECK_REFF = 0)
 WHERE
+(CASE
+        WHEN f.CHECK_REFF = '1' THEN k.PROJECT = $P{klien} OR k.PROJECT = $P{klien}
+        ELSE md.NAME_ACCOUNT = md.NAME_ACCOUNT
+    END) AND
     f.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
 	</queryString>
 	<field name="FUNDING_ID" class="java.lang.Integer">
@@ -62,11 +69,6 @@ WHERE
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[FUNDING REPORT]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="562" y="37" width="240" height="20" uuid="55a01996-548c-40b4-9db0-a899b6e63c9a"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Keterangan]]></text>
 			</staticText>
 		</band>
 	</title>
