--- a/Invoice/report/PO_MEDIA_2.jrxml
+++ b/Invoice/report/PO_MEDIA_2.jrxml
@@ -12,6 +12,9 @@
 	<parameter name="klien" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="perusahaan" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT
     k.NO_KONTRAK,
@@ -38,9 +41,12 @@ FROM
     MASTER_MEDIA mm ON pm.MASTER_MEDIA_ID = mm.MASTER_MEDIA_ID
         INNER JOIN
     TAGIHAN_MEDIA tm ON pm.PO_MEDIA_NO = tm.PO_MEDIA_NO
+        INNER JOIN
+    MASTER_PERUSAHAAN mp ON k.MASTER_PERUSAHAAN_ID = mp.MASTER_PERUSAHAAN_ID
 WHERE
-    pm.PEKERJAAN_KEMENTERIAN = $P{klien}
-        AND pm.TANGGAL_TAYANG BETWEEN $P{date1} AND $P{date2};]]>
+    mp.NAME = $P{perusahaan} OR k.PROJECT = '' AND
+    pm.PEKERJAAN_KEMENTERIAN = $P{klien} AND
+    pm.TANGGAL_TAYANG BETWEEN $P{date1} AND $P{date2};]]>
 	</queryString>
 	<field name="NO_KONTRAK" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
