--- a/Invoice/report/PO_PRODUKSI_2.jrxml
+++ b/Invoice/report/PO_PRODUKSI_2.jrxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PO_PRODUKSI" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="dfaa67a4-74f5-4382-9d9c-ca80c2ee20d4">
-	<property name="ireport.zoom" value="3.0"/>
-	<property name="ireport.x" value="18"/>
-	<property name="ireport.y" value="336"/>
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="date1" class="java.util.Date">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="date2" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="perusahaan" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -26,7 +29,10 @@ FROM
     KONTRAK k ON pp.KONTRAK_ID = k.KONTRAK_ID
         INNER JOIN
     DETAIL_PRODUKSI dp ON pp.PO_PRODUKSI_NO = dp.PO_PRODUKSI_NO
+        INNER JOIN
+    MASTER_PERUSAHAAN mp ON k.MASTER_PERUSAHAAN_ID = mp.MASTER_PERUSAHAAN_ID
 WHERE
+    mp.NAME = $P{perusahaan} OR k.PROJECT = '' AND
     pp.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
 	</queryString>
 	<field name="PO_PRODUKSI_ID" class="java.lang.Integer">
