--- a/Invoice/report/FUNDING_2.jrxml
+++ b/Invoice/report/FUNDING_2.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FUNDING" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fc92dcd0-6ada-426e-9330-3ccef1183903">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="266"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="date1" class="java.util.Date">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -34,7 +34,7 @@ FROM
         AND (f.CHECK_REFF = 0)
 WHERE
 (CASE
-        WHEN f.CHECK_REFF = '1' THEN k.PROJECT = $P{klien} OR k.PROJECT = $P{klien}
+        WHEN f.CHECK_REFF = '1' THEN k.PROJECT = $P{klien} OR k.PROJECT = ''
         ELSE md.NAME_ACCOUNT = md.NAME_ACCOUNT
     END) AND
     f.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
