--- a/Invoice/report/COST_OPERATIONAL.jrxml
+++ b/Invoice/report/COST_OPERATIONAL.jrxml
@@ -24,48 +24,28 @@
 		</box>
 	</style>
 	<subDataset name="Table Dataset 1" uuid="5d3f3d5b-5609-4075-9807-d9bd4c152a57"/>
-	<parameter name="date1" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-    CO.COST_OPERASIONAL_ID,
-    CO.MASTER_DANA_ID,
-    CO.PIC,
-    CO.KEPERLUAN,
-    CO.TANGGAL_PEMBELIAN,
-    CO.PPN_IMAGE,
-    MD.NAME_BANK_ACCOUNT,
-    MD.NO_BANK_ACCOUNT
-FROM
-    COST_OPERASIONAL AS CO
-        JOIN
-    MASTER_DANA AS MD ON CO.MASTER_DANA_ID = MD.MASTER_DANA_ID
-WHERE
-    CO.TANGGAL_PEMBELIAN = $P{date1};]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="COST_OPERASIONAL_ID" class="java.lang.Integer">
+	<field name="costOperasionalId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="MASTER_DANA_ID" class="java.lang.Integer">
+	<field name="masterDanaId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PIC" class="java.lang.String">
+	<field name="pic" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="KEPERLUAN" class="java.lang.String">
+	<field name="keperluan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="TANGGAL_PEMBELIAN" class="java.sql.Date">
+	<field name="tanggalPembelian" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PPN_IMAGE" class="java.lang.Object">
+	<field name="namaBankAkun" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="NAME_BANK_ACCOUNT" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="NO_BANK_ACCOUNT" class="java.lang.String">
+	<field name="noBankAkun" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<background>
@@ -155,23 +135,23 @@ WHERE
 			</rectangle>
 			<textField>
 				<reportElement x="9" y="6" width="128" height="20" uuid="eaf20231-3d46-4921-9f91-bbe02a893e28"/>
-				<textFieldExpression><![CDATA[$F{NAME_BANK_ACCOUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{namaBankAkun}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="152" y="6" width="124" height="20" uuid="91edcaff-6a88-4d09-a53a-71fb9e8b87d7"/>
-				<textFieldExpression><![CDATA[$F{NO_BANK_ACCOUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{noBankAkun}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="293" y="6" width="125" height="20" uuid="dae55baf-bafa-4c14-b265-2607a4a27a6c"/>
-				<textFieldExpression><![CDATA[$F{PIC}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pic}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="432" y="6" width="241" height="20" uuid="a00ed5ff-fccb-4b4e-b4bb-50c383e58d33"/>
-				<textFieldExpression><![CDATA[$F{KEPERLUAN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{keperluan}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="684" y="6" width="111" height="20" uuid="6b480b5f-8ed2-4e22-80b8-d813d979c689"/>
-				<textFieldExpression><![CDATA[$F{TANGGAL_PEMBELIAN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tanggalPembelian}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
